--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
         <!-- First Featurette -->
         <div class="featurette" id="about">
-            <img class="featurette-image img-circle img-responsive pull-right" src="http://www.maikel.co/images/roy.jpg">
+            <img class="featurette-image img-circle img-responsive pull-right" src="http://www.maikel.co/images/roy3.jpg">
             <h2 class="featurette-heading">- We - 
                 <span class="text-muted">Roy</span>
             </h2>
@@ -81,7 +81,7 @@
 
         <!-- Second Featurette -->
         <div class="featurette" id="services">
-            <img class="featurette-image img-circle img-responsive pull-left" src="http://www.maikel.co/images/brian.jpg">
+            <img class="featurette-image img-circle img-responsive pull-left" src="http://www.maikel.co/images/brian3.jpg">
             <h2 class="featurette-heading">- Are - 
                 <span class="text-muted">Brian</span>
             </h2>
@@ -92,7 +92,7 @@
 
         <!-- Third Featurette -->
         <div class="featurette" id="contact">
-            <img class="featurette-image img-circle img-responsive pull-right" src="http://www.maikel.co/images/bert.jpg">
+            <img class="featurette-image img-circle img-responsive pull-right" src="http://www.maikel.co/images/bert3.jpg">
             <h2 class="featurette-heading">- Awesome - 
                 <span class="text-muted">Bert</span>
             </h2>
